# youlearn

./: .gitignore  CLAUDE.md  README.md
api/: package.json  pnpm-lock.yaml
api/src/: app.module.ts  main.ts
app/: pnpm-lock.yaml
convex/: package.json  pnpm-lock.yaml  tsconfig.json
convex/convex/: auth.ts  schema.ts  subscriptions.ts  summaryRequests.ts  videoTranscripts.ts
convex/convex/_generated/: api.d.ts
embed/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
embed/src/: App.tsx  index.css
mobile/: app.json  metro.config.js  package.json  pnpm-lock.yaml
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/app/: +native-intent.ts  _layout.tsx  modal.tsx  paywall.tsx
mobile/app/(auth)/: _layout.tsx  sign-in.tsx
mobile/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  settings.tsx
mobile/app/videos/: [id].tsx
mobile/assets/: embed.html
mobile/components/: DetailLevelSelector.tsx  DisplayLanguageSelector.tsx  I18nProvider.tsx  LanguageSelector.tsx  RevenueCatProvider.tsx  SubscriptionGate.tsx  parallax-scroll-view.tsx
mobile/components/ui/: collapsible.tsx  (+1 more)
mobile/constants/: rne-theme.ts  theme.ts
mobile/hooks/: use-color-scheme.ts  use-color-scheme.web.ts  use-rne-theme.ts  useMarkdownStyles.ts  useShareIntentHandler.ts
mobile/ios/: Podfile
mobile/lib/: api.ts  config.ts  datetime.ts  store.ts  streaming.ts
mobile/utils/: transcript.ts  youtube.ts
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
youapi/: README.md  main.py  pyproject.toml  services.py
(+52 files in other folders)
