[project]
name = "youapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "youtube-transcript-api>=1.2.3",
    "ai-sdk-python>=0.1.0",
    "python-dotenv>=1.0.0",
    "pytubefix>=10.3.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "uvicorn>=0.38.0",
]
